--- a/src/AdminWeb/src/app/views/auditlog/auditlog-list/advanced-filters/message-deleted-search/message-deleted-search.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-list/advanced-filters/message-deleted-search/message-deleted-search.component.html
@@ -11,11 +11,9 @@
 
       <c-row>
         <c-col md="6">
-          <label cLabel for="contentContains">Text obsahuje</label>
-          <input
-            cFormControl
+          <app-text-input
             formControlName="contentContains"
-            type="text"
+            label="Text obsahuje"
             sizing="sm"
           />
         </c-col>
