--- a/src/AdminWeb/src/app/views/auditlog/auditlog-list/auditlog-list-filter/auditlog-list-filter.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-list/auditlog-list-filter/auditlog-list-filter.component.html
@@ -1,8 +1,10 @@
 <app-filter-card [form]="form" [parentFilterComponent]="this">
   <c-row class="mb-1">
     <c-col>
-      <label cLabel for="ids">ID záznamů (oddělovat čárkou)</label>
-      <input cFormControl type="text" formControlName="ids" />
+      <app-text-input
+        formControlName="ids"
+        label="ID záznamů (oddělovat čárkou)"
+      />
     </c-col>
   </c-row>
 
