--- a/src/AdminWeb/src/app/views/searching/searching-list/searching-list-filter/searching-list-filter.component.html
+++ b/src/AdminWeb/src/app/views/searching/searching-list/searching-list-filter/searching-list-filter.component.html
@@ -39,8 +39,7 @@
 
   <c-row>
     <c-col>
-      <label cLabel for="messageQuery">Obsah hledání</label>
-      <input cFormControl type="text" formControlName="messageQuery" />
+      <app-text-input formControlName="messageQuery" label="Obsah hledání" />
     </c-col>
 
     <c-col>
