Integrated datetime range component into reminder

--- a/src/AdminWeb/src/app/views/reminder/reminder-list/reminder-list-filter/reminder-list-filter.component.html
+++ b/src/AdminWeb/src/app/views/reminder/reminder-list/reminder-list-filter/reminder-list-filter.component.html
@@ -9,20 +9,7 @@
     </c-col>
 
     <c-col>
-      <label cLabel for="notifyAt">Oznámit v (OD - DO)</label>
-      <c-input-group>
-        <input
-          cFormControl
-          type="datetime-local"
-          formControlName="notifyAtFromUtc"
-        />
-
-        <input
-          cFormControl
-          type="datetime-local"
-          formControlName="notifyAtToUtc"
-        />
-      </c-input-group>
+      <app-datetime-range formControlName="notifyAt" label="Oznámit v" />
     </c-col>
   </c-row>
 
