User measures datetime range component

--- a/src/AdminWeb/src/app/views/user-measures/measures-list/measures-list-filter/measures-list-filter.component.html
+++ b/src/AdminWeb/src/app/views/user-measures/measures-list/measures-list-filter/measures-list-filter.component.html
@@ -14,16 +14,7 @@
     </c-col>
 
     <c-col>
-      <label cLabel for="createdFrom">Vytvořeno (OD - DO)</label>
-      <c-input-group>
-        <input
-          cFormControl
-          type="datetime-local"
-          formControlName="createdFrom"
-        />
-
-        <input cFormControl type="datetime-local" formControlName="createdTo" />
-      </c-input-group>
+      <app-datetime-range formControlName="created" label="Vytvořeno" />
     </c-col>
   </c-row>
 
