--- a/src/AdminWeb/src/app/views/emote/suggestions/suggestions-list/suggestions-list-list/suggestions-list-list.component.html
+++ b/src/AdminWeb/src/app/views/emote/suggestions/suggestions-list/suggestions-list-list/suggestions-list-list.component.html
@@ -101,12 +101,22 @@
         </div>
       }
 
-      <p class="mt-3">
-        <b>Důvod přidání</b>:
-        <textarea cFormControl disabled style="height: 150px">{{
-          rowInModal.reasonToAdd
-        }}</textarea>
-      </p>
+      <c-row class="mt-3">
+        <c-col>
+          <b>Důvod přidání</b>:
+          <textarea cFormControl disabled style="height: 150px">{{
+            rowInModal.reasonToAdd
+          }}</textarea>
+        </c-col>
+
+        <c-col md="4">
+          <b>Náhled:</b>
+
+          <div class="d-flex align-items-center justify-content-center h-100">
+            Někdy bude
+          </div>
+        </c-col>
+      </c-row>
     }
   </ng-container>
 </app-modal>
