Fixed hambuerger menu opening. Resolved #46

--- a/src/AdminWeb/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/AdminWeb/src/app/layout/default-layout/default-header/default-header.component.html
@@ -1,7 +1,7 @@
 <ng-container>
   <c-container [fluid]="true" class="border-bottom px-4">
     <button
-      cSidebarToggle="sidebarid()"
+      [cSidebarToggle]="sidebarId()"
       cHeaderToggler
       class="btn"
       toggle="visible"
