--- a/src/AdminWeb/src/app/components/filters/filter-card/filter-card.component.html
+++ b/src/AdminWeb/src/app/components/filters/filter-card/filter-card.component.html
@@ -1,5 +1,5 @@
 <c-card class="mb-3">
-  <app-card-header #header icon="cilSearch" title="Vyhledávání" />
+  <app-card-header #header icon="cilSearch" [title]="title()" />
 
   <app-form-card-body [form]="form()" [header]="header">
     <ng-content></ng-content>
