--- a/src/AdminWeb/src/app/views/searching/searching-list/searching-list-list/searching-list-list.component.html
+++ b/src/AdminWeb/src/app/views/searching/searching-list/searching-list-list/searching-list-list.component.html
@@ -88,23 +88,9 @@
     }
   </ng-container>
 
-  <ng-container footer>
-    <button
-      cButton
-      [variant]="'outline'"
-      [color]="'success'"
-      (click)="confirmRemove()"
-    >
-      Potvrdit
-    </button>
-
-    <button
-      cButton
-      [variant]="'outline'"
-      [color]="'danger'"
-      (click)="removeModal.close()"
-    >
-      Zrušit
-    </button>
-  </ng-container>
+  <app-modal-question-buttons
+    footer
+    [parentModal]="removeModal"
+    (onConfirm)="confirmRemove()"
+  />
 </app-modal>
