--- a/src/AdminWeb/src/app/components/notification-toast/notification-toast.component.html
+++ b/src/AdminWeb/src/app/components/notification-toast/notification-toast.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <c-toast-header [closeButton]="true">
+  <c-toast-header [closeButton]="false">
     <strong [ngClass]="{ 'text-danger': notification.isError }">
       @if (notification) {
         @if (notification.isError) {
