Created autoreply list page.

--- a/src/AdminWeb/src/app/components/ag-grid/renderers/action-buttons-cell-renderer/buttons-cell-renderer.component.html
+++ b/src/AdminWeb/src/app/components/ag-grid/renderers/action-buttons-cell-renderer/buttons-cell-renderer.component.html
@@ -7,7 +7,7 @@
       [color]="getButtonColor(button, rowData)"
       [size]="'sm'"
       class="text-decoration-underline pt-0 pb-0 mb-1"
-      (click)="button.action(rowData)"
+      (click)="buttonClick(button, rowData)"
       [isVisible]="button.isVisible ? button.isVisible(rowData) : true"
     >
       @if (button.icon) {
