Created auto reply detail

--- a/src/AdminWeb/src/app/components/button/button.component.html
+++ b/src/AdminWeb/src/app/components/button/button.component.html
@@ -4,7 +4,7 @@
   [variant]="def().variant ?? 'ghost'"
   [color]="color()"
   [size]="def().size ?? 'sm'"
-  [classList]="classList()"
+  [attr.class]="class()"
   (click)="onClick()"
   [isVisible]="isVisible()"
 >
