--- a/src/AdminWeb/src/app/components/forms/text-input/text-input.component.html
+++ b/src/AdminWeb/src/app/components/forms/text-input/text-input.component.html
@@ -1,13 +1,23 @@
 <label cLabel>{{ label() }}</label>
 
-<input
-  cFormControl
-  [formControl]="formControl()"
-  type="text"
-  [sizing]="sizing()"
-  [attr.autocomplete]="autocomplete() ? 'on' : 'off'"
-/>
+@if (multiline()) {
+  <textarea
+    cFormControl
+    [formControl]="formControlElement()"
+    [sizing]="sizing()"
+    [attr.autocomplete]="autocomplete() ? 'on' : 'off'"
+    style="height: 150px"
+  ></textarea>
+} @else {
+  <input
+    cFormControl
+    [formControl]="formControlElement()"
+    type="text"
+    [sizing]="sizing()"
+    [attr.autocomplete]="autocomplete() ? 'on' : 'off'"
+  />
+}
 
 @if (hasValidations()) {
-  <app-validation-errors [formControlObject]="formControl()" />
+  <app-validation-errors [formControlObject]="formControlElement()" />
 }
