--- a/src/PrivateAdmin/src/app/administration/auto-reply/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/auto-reply/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
 <common-dashboard [ignoreFilter]="true">
-    <app-list list></app-list>
+    <app-new-web-info
+        [text]="'Automatické odpovědi byly přesunuty do nové administrace.'"
+    />
 </common-dashboard>
